<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs"
    android:id="@+id/drawable_layout">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menuRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AboutUs">

            <include
                android:id="@+id/main_page_toolbar"
                layout="@layout/app_bar_layout">

            </include>

            <FrameLayout
                android:id="@+id/FrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogout"
                android:layout_alignParentStart="true"
                android:layout_marginTop="-8dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="60dp" />

            </FrameLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_page_toolbar"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/about_us"
                android:textSize="21sp"
                android:fontFamily="@font/josefinsans_bold"
                android:textColor="@color/blueRose"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/definition"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="104dp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/services"
                android:textSize="21sp"
                android:fontFamily="@font/josefinsans_bold"
                android:textColor="@color/blueRose"/>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/services1"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="104dp"
                android:textColor="@color/Black"/>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/services2"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="104dp"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/future"
                android:textSize="21sp"
                android:fontFamily="@font/josefinsans_bold"
                android:textColor="@color/blueRose"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/services3"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="104dp"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/future"
                android:textSize="21sp"
                android:fontFamily="@font/josefinsans_bold"
                android:textColor="@color/blueRose"/>




        </RelativeLayout>
    </ScrollView>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationMenu"
        android:layout_width="245dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="4dp"
        app:menu="@menu/navigation_menu">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>